Aplicando cambios de estilo

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ html{
   .title{   
      width: 100%;
      text-align: center;
-     color: white;
+     color: gray;
   }
   .fila{
     margin: 4px;
